tests/machine/x/st/string_contains.out
Object: 'catch' error: Invalid argument contains: must be a SmallInteger
SystemExceptions.WrongClass(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:778)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:774)
String(Object)>>checkIndexableBounds: (Object.st:794)
String>>at: (String.st:312)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/string_contains.st:5)
Object: 'catch' error: Invalid argument contains: must be a SmallInteger
SystemExceptions.WrongClass(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:778)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:774)
String(Object)>>checkIndexableBounds: (Object.st:794)
String>>at: (String.st:312)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/string_contains.st:6)