tests/machine/x/st/string_contains.st
" Generated by Mochi compiler v0.10.25 on 2025-07-13T05:07:59Z
"
| s |
s := 'catch'.
Transcript show: ((s at: 'contains') value: 'cat') printString; cr.
Transcript show: ((s at: 'contains') value: 'dog') printString; cr.
